# pi-kobuki-git

./: notes.txt
piko_bringup/: CMakeLists.txt  package.xml
piko_bringup/config/: head_camera_dynamixels.yaml  laser_filter.yaml  piko.rviz  robot.rviz  yocs_cmd_vel_mux.yaml
piko_bringup/launch/: activate_auto_docking.launch  auto_docking.launch  depthimage_to_laserscan.launch  gps.launch  head_camera_dynamixels.launch  hokuyo.launch  keyboard_teleop.launch  laser_filter.launch  logitech_teleop.launch  navi_velocity_smoother.launch  openni2_skip_2.launch  openni2_skip_3.launch  openni_hydro.launch  piko.launch  piko_minimal.launch  robot_model.launch  rtabmap_openni.launch  rtabmap_openni2.launch  spencer_openni2_skip_2.launch  start_kobuki.launch  twist_velocity_smoother.launch  view_robot.launch  yocs_cmd_vel_mux.launch  yocs_safety_controller.launch
piko_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml  robot.launch.xml  urdf.launch.xml
piko_bringup/launch/unused/: throttle_rtabmap_topics.launch
piko_bringup/nodes/: gamepad_buttons.py
piko_demo/: CMakeLists.txt  package.xml
piko_demo/config/: waypoints.yaml
piko_demo/launch/: base_only_person_tracker_3d.launch  cob_head_tracker.launch  head_tracker_3d.launch  move_base_follow_me.launch  move_base_square.launch  move_base_waypoints.launch  nav_square_odom.launch  odom_out_and_back.launch  piko_demo.launch  tb_follower.launch
piko_description/: CMakeLists.txt  package.xml
piko_description/config/: urdf.rviz
piko_description/launch/: piko_urdf.launch  test_sibot_with_primesense_urdf.launch
piko_description/urdf/: dynamixel_head_hardware.xacro  hexagons.urdf.xacro  pan_tilt_head_xtion.urdf.xacro  piko.urdf.xacro  piko_hexagons_laser.urdf.xacro  torso.urdf.xacro  turtlebot_library.urdf.xacro  xtion.urdf.xacro
piko_description/urdf/sensors/: laser.urdf.xacro
piko_dynamixels/: CMakeLists.txt  package.xml
piko_dynamixels/launch/: arbotix_head_tracker_2d.launch  monitor_dynamixels.launch
piko_dynamixels/nodes/: head_tracker_3d.py  monitor_dynamixels.py
piko_dynamixels/scripts/: arbotix_center_all_servos.py
piko_msgs/: CMakeLists.txt  package.xml
piko_msgs/msg/: Dock.msg
piko_msgs/srv/: RequestDock.srv
piko_nav/: CMakeLists.txt  package.xml  turtlebot_nav.rviz
piko_nav/config/: jr.rviz  nav.rviz  rtabmap.rviz  rtabmap_multi_session.ini  rtabmap_rgbd.rviz  turtlebot_rtabmap.rviz
piko_nav/config/nav_server/: condo_living_room.yaml  condo_locations.yaml  turtlebot_world_locations.yaml
piko_nav/config/no_layers/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
piko_nav/config/no_layers/no_map/: global_costmap_params.yaml
piko_nav/config/piko/: amcl.yaml
piko_nav/config/piko/config_common/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_planner_params.yaml
piko_nav/config/piko/config_with_map/: global_costmap_params.yaml
piko_nav/config/simple_layers/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_with_map_params.yaml  local_costmap_params.yaml  move_base_params.yaml
piko_nav/config/turtlebot/config_common/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml  (+2 more)
piko_nav/launch/: amcl.launch  approach_ar_tag.launch  gmapping.launch  move_base_tracker.launch  move_base_tracker_test.launch  turtlebot_gazebo_amcl.launch  turtlebot_gazebo_with_map.launch
piko_nav/launch/frontier/: frontier_exploration_global_map.launch  frontier_exploration_no_global_map.launch  turtlebot_exploration_3d.launch
piko_nav/launch/no_layers/: move_base_no_layers.launch  move_base_no_layers_blank_map.launch  move_base_no_layers_local.launch  move_base_no_layers_no_map.launch  move_base_no_layers_with_map.launch
piko_nav/launch/piko/: piko_amcl_with_move_base.launch  piko_gmapping.launch  piko_goto_location.launch  piko_move_base.launch  piko_move_base_no_map.launch  piko_move_base_with_blank_map.launch  piko_move_base_with_map.launch  piko_nav_condo.launch  piko_nav_server.launch
piko_nav/launch/rtabmap/: demo_robot_localization.launch  demo_robot_mapping.launch  demo_turtlebot_mapping.launch  gazebo_rtabmap_mapping.launch  jr_rtabmap_mapping.launch  rgbd_mapping.launch  rtabmap.launch  rtabmap_localization.launch  rtabmap_mapping.launch  rtabmap_rgbd_rviz.launch  rtabmap_rviz.launch  rtabmapviz.launch  stereo_mapping.launch
piko_nav/launch/segway/: segway_murphy_2d_map_nav_demo.launch  segway_trajectory_rollout_move_base.launch
piko_nav/launch/turtlebot/: amcl_with_dwa.launch  dwa_gmapping.launch  dwa_move_base.launch  dwa_no_map.launch  dwa_with_blank_map.launch  dwa_with_map.launch
piko_nav/launch/turtlebot_exploration_3d/: Octomap3D_0103_16:59_57.ot  Octomap3D_0103_17:05_58.ot  Octomap3D_0104_05:58_46.ot  tex3d_gmapping.launch
piko_nav/launch/unused/: throttled_rtabmap_localization.launch  throttled_rtabmap_mapping.launch  throttled_rtabmap_raw_localization.launch  throttled_rtabmap_rviz.launch  throttled_rtabmapviz.launch
piko_nav/maps/: blank_map_10m_0.05.yaml  blank_map_15m_0.01.yaml  condo-1.pgm  condo-1.yaml  condo-living-room.pgm  condo-living-room.yaml  fetch_world.pgm  fetch_world.yaml  map.pgm  map.yaml
piko_nav/nodes/: approach_ar_tag.py  map_processor.py  move_base_tracker.py  move_base_tracker_test.py  mvp_dock_home_base.py  odom_out_and_back.py  patrol_turtlebot_world.py  piko_goto_location.py  piko_nav_server.py  rtabmap_patrol.py  test_angular_acceleration.py  test_linear_acceleration.py
piko_nav/scripts/: gazebo_makebag.sh  make_jr_bag.sh  make_jr_bag_no_point_clouds.sh  makebag.sh  playbag.sh  read_pointcloud2.py
(+133 files in other folders)
