<?xml version="1.0"?>
<package>
  <name>piko_bringup</name>
  <version>0.1.0</version>

  <description>Startup and config files for Pi Kobuki</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://www.pirobot.org/wordpress</url>
  <url type="bugtracker">https://github.com/pirobot/piko/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>piko_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>openni2_launch</run_depend>
  <!-- run_depend>robot_pose_ekf</run_depend -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>