<?xml version="1.0"?>
<package>
  <name>piko_nav</name>
  <version>0.1.0</version>

  <description>Navigation config and launch files for Pi Kobuki</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://www.pirobot.org/wordpress</url>
  <url type="bugtracker">https://github.com/pirobot/piko/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>